--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="17dp"
         android:layout_marginTop="20dp"
-        android:text="用户名:"
+        android:text="@string/username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_image" />
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:layout_marginEnd="20dp"
-        android:text="登录"
+        android:text="@string/login"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/user_name" />
 
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="支付"
+        android:text="@string/pay"
         app:layout_constraintBottom_toBottomOf="@+id/modify_userInfo"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
 
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
-        android:text="用户信息"
+        android:text="@string/userInfo"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/is_login" />
 
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="注销"
+        android:text="@string/logout"
         app:layout_constraintBottom_toBottomOf="@+id/is_login"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
 
@@ -76,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="定制登陆"
+        android:text="@string/custom_login"
         app:layout_constraintBottom_toBottomOf="@+id/login"
         app:layout_constraintStart_toStartOf="@+id/guideline" />
 
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
-        android:text="是否登陆"
+        android:text="@string/isLogin"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/login" />
 
